hide right border of .CodeMirror-gutters

--- a/styles/code-fold.less
+++ b/styles/code-fold.less
@@ -56,3 +56,9 @@
 .CodeMirror-foldgutter {
 	width: 1em;
 }
+
+// Hide border of gutter
+
+.CodeMirror-gutters {
+	border-right: none !important;
+}
